project2/test/test_2_r02.out
Error type 2 at line 8: add function is invoked without definition
