project2/test/test_2_r02.out2
Error type 2 at Line 8: add function is invoked without deﬁnition
Error type 5 at Line 8: unmatching types on both sides of assignment operator (=)
